# gazzetta

./: Cargo.toml  README.md
src/: main.rs  model.rs  output.rs
templates/: article.css  article.hbs  articles.css  articles.hbs  index.css  index.hbs  tag.hbs
