[package]
name = "gazzetta"
version = "0.0.1"
edition = "2021"
description = "An opinionated static site generator for blogs"

[dependencies]
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
pulldown-cmark = "0.9.2"
clap = { version = "4.0.10", features = ["derive"] }
proc-macro2 = "1.0.46"
walkdir = "2.3.2"