[package]
name = "gazzetta"
version = "0.0.1"
edition = "2021"
description = "An opinionated static site generator for blogs"

[dependencies]
anyhow = "1.0.56"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.145", features = ["derive"] }
clap = { version = "4.0.10", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_yaml = "0.9.13"
proc-macro2 = "1.0.46"
walkdir = "2.3.2"
handlebars = "4.3.0"