[package]
name = "gazzetta"
version = "0.0.1"
edition = "2021"
description = "An opinionated static site generator for blogs"

[dependencies]
anyhow = "1.0.56"
pulldown-cmark = { git = "https://github.com/liabri/pulldown-cmark" }
zmerald = { git = "https://github.com/liabri/zmerald" }
serde = { version = "1.0.145", features = ["derive"] }
clap = { version = "4.0.10", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
proc-macro2 = "1.0.46"
walkdir = "2.3.2"
handlebars = "4.3.0"
icu = { version = "1.0.0", features = ["serde"] }
icu_testdata = "1.0.0"
minify-html-onepass = "0.10.2"
lol_html = "0.3.1"
html_editor = "0.5.2"